tests/error/named_union_global_static.gw
#! [contains] can only be used at class scope.
union static { int i; } u;
